Adds analytics resource, remove analytics related information from all other resources and add operation to star a project
