# src/models/Task.js
@@ -1,16 +1,13 @@
 class Task {
-  constructor(id, title, points, projectId, description, assignee, creationDate, lastUpdate, status, isArchived, updatesCount, tags, priority) {
+  constructor(id, title, points, projectId, description, assignee, status, isArchived, tags, priority) {
     this.id = id;
     this.title = title;
     this.points = points;
     this.projectId = projectId;
     this.description = description;
     this.assignee = assignee;
-    this.creationDate = creationDate;
-    this.lastUpdate = lastUpdate;
     this.status = status;
     this.isArchived = isArchived;
-    this.updatesCount = updatesCount;
     this.tags = tags;
     this.priority = priority;
   }
@@ -19,17 +16,12 @@ class Task {
 
   isTechnicalStory() { return !this.isUserStory() }
 
-  _onUpdate() {
-    this.lastUpdate = new Date(Date.now());
-    this.updatesCount++;
+  static ofUserStory(id, projectId, title, description, assignee, points, status, tags, priority) {
+    return new Task(id, title, points, projectId, description || '', assignee, status, false, tags, priority);
   }
 
-  static ofUserStory(id, projectId, title, description, assignee, creationDate, points, status, tags, priority) {
-    return new Task(id, title, points, projectId, description || '', assignee, creationDate, new Date(Date.now()), status, false, 0, tags, priority);
-  }
-
-  static ofTechnicalStory(id, projectId, title, description, assignee, creationDate, status, tags, priority) {
-    return new Task(id, title, undefined, projectId, description, assignee, creationDate, new Date(Date.now()), status, false, 0, tags, priority);
+  static ofTechnicalStory(id, projectId, title, description, assignee, status, tags, priority) {
+    return new Task(id, title, undefined, projectId, description, assignee, status, false, tags, priority);
   }
 
   taskRepresentation() {
@@ -39,10 +31,7 @@ class Task {
       parentProjectId: this.projectId,
       description: this.description || '',
       assignee: this.assignee,
-      creationDate: this.creationDate.toISOString().split('T')[0],
-      lastUpdate: this.lastUpdate.toISOString().split('T')[0],
       status: this.status,
-      updatesCount: this.updatesCount,
       tags: this.tags,
       priority: this.priority
       // isArchived: this.isArchived,
